fixed navbar z-index issue

--- a/app/assets/stylesheets/styles/header.scss
+++ b/app/assets/stylesheets/styles/header.scss
@@ -5,6 +5,7 @@
   height: 55px;
   background: $dark;
   position:fixed;
+  z-index: 1;
 
   .navbar {
 
